Fixed style: horizontal scrollbar too close to movies collections names in the collections page

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -544,6 +544,7 @@ input {
 }
 
 .existing-collections {
+    padding: 10px 0px;
     display: flex;
     overflow: auto;
 }
